Fixed a styling issue where background would become transparent if content was too short when a modal opened.

--- a/packages/renderer/index.css
+++ b/packages/renderer/index.css
@@ -23,6 +23,7 @@ html,
 body {
   @apply text-text;
   @apply font-mono;
+  @apply bg-background;
 }
 
 button {
